# redis-microsvc

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
openssl/: makecert.sh
public/: index.html  tailwind.css
src/: main.rs  router.rs
src/api/: feed.rs  home.rs  mod.rs
src/model/: feed.rs  mod.rs
src/router/: mod.rs
src/share/: common.rs
