[package]
name = "redis-microsvc"
version = "0.1.0"
authors = ["bryantdeters <bryantdeters@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-redis = "0.6"
actix-web = { version = "1.0", features=["rust-tls"] }
chrono = "0.4"
futures = "0.1"
guid-create = "0.1"
itertools = "0.8"
log = "0.4.8"
mime_guess = "2.0.1"
redis-async = "0.4"
rustls = "0.15"
rust-embed = "5.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
