[package]
name = "redis-microsvc"
version = "0.2.0"
authors = ["bryantdeters <bryantdeters@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-redis = "0.8"
actix-web = { version = "2.0", features=["rustls"] }
actix-rt = "1.0"
chrono = "0.4"
guid-create = "0.1"
itertools = "0.8"
log = "0.4.8"
mime_guess = "2.0.1"
redis-async = "0.6.1"
rustls = "0.16"
rust-embed = "5.2.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
