[package]
name = "redis-microsvc"
version = "0.3.0"
authors = ["bryantdeters <bryantdeters@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-redis = "0.9"
actix-web = { version = "3.0", features=["rustls"] }
actix-web-prom = "0.5.0"
chrono = "0.4"
guid-create = "0.1"
itertools = "0.8"
log = "0.4.8"
mime_guess = "2.0.1"
redis-async = "0.6.1"
rustls = "0.18"
rust-embed = "5.2.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
